--- a/DemoGoogleMaps-master/map2.html
+++ b/DemoGoogleMaps-master/map2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <script src="https://renatto08.github.io/DemoGoogleMaps/js/pos6.js"></script>
+  <script src="https://mitmur.github.io/Maps_Gmaps/DemoGoogleMaps-master/js/pos6.js"></script>
     <title>Remove Markers</title>
     <style>
       /* Always set the map height explicitly to define the size of the div
